<resources>
    <string name="app_name"> SPCA Montreal </string>
    <string name="InitialDownloadMsg">Downloading animal information</string>
    <string name="SynchMsg">Checking for new adoptable animals</string>
    <string name="title_section1">Main Page</string>
    <string name="title_section2">Info</string>
    <string name="title_section3">Favorites</string>
    <string name="title_section4">New</string>
    <string name="title_section5">Notifications</string>
    <string name="title_section6">Contact</string>
    <string name="title_section7">Before Adopting</string>
    <string name="title_section8">Donate</string>
    <string name="important_message">FREE STUFF OR CATS OR WTV</string>
    <string name="age_text_view">Age</string>
    <string name="gender_text_view">Gender</string>
    <string name="checkbox_male">Male</string>
    <string name="checkbox_female">Female</string>
    <string name="search_button">Search</string>
    <string name="more_details">Details</string>
    <string name="loading_data">Loading Data</string>
    <string name="size_dogs">Size (Dogs)</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spcaHours">Adoption Hours:\nMonday to Friday: 12pm to 7pm\nSaturday and Sunday: 11am to 5pm\nHours may change during holidays or special events.</string>
    <string name="adoption">Adoption</string>
    <string name="compassionate_adoption_text">*\t Compassionate adoption depends on the animal\'s health or age – the evaluation is made case by case</string>
    <string name="general_tab">General</string>
        <string name="b4_adoption_title">Before Adopting</string>
        <string name="before_adoption">
            It is important to:\n
            - Assess the costs of having a pet: food, visits to the veterinarian, litter, care products, and so on.\n
            - Know your animal\'s life expectancy and whether you have the time and energy to take care of a pet day after day.\n
            - Anticipate that your new pet will need time to adapt to his or her new surroundings and understand that he could cause damages during this period.
        </string>
        <string name="open_hours">Opening Hours</string>
        <string name="opening_hours">
            - Monday to Friday: 12:00 pm to 8:00 pm\n
            - Saturday and Sunday: 11:00 am to 5:00 pm
        </string>
        <string name="fees">Fees</string>
        <string name="mandatory">
            The fees include sterilization (spaying or neutering), which is mandatory for all adopted dogs and cats,\n
            the first set of vaccines, deworming treatment, a microchip and a 15-day health guarantee (an additional fee of $20 applies to open a file).\n
            **A $100 deposit is required for those animals who cannot be sterilized at the time of their adoption.\n
            The deposit will be reimbursed after the animal has been sterilized.
        </string>
    <string name="dog_tab">Dogs</string>
            <string name="adoption_fees_dogs">
                - Puppies – less than 8 months: $350
                \n- Dogs – 8 months and older: $295
                \n- Compassionate adoption: $75
                \n\n Note: A $200 deposit will be required for all puppies and some adult dogs. It will be reimbused upon proof that an obedience course has been completed.
                \n\n(Prices subject to change without notice)
            </string>
    <string name="cat_tab">Cats</string>
            <string name="adoption_fees_cats">
                - Kitten – up to 5 months: $195
                \n- Cat – 5 months and more: $125
                \n- Compassionate adoption: $75
                \n\n(Prices subject to change without notice)
            </string>
    <string name="others_tab">Others</string>
    <string name="rabbit_title">Rabbits</string>
    <string name="birds_title">Birds</string>
    <string name="others_title">Others</string>
    <string name="rabbits_adopt_info">
        - Sterilized male $100\n
        - Sterilized female $100
    </string>
    <string name="birds_adopt_info">

        - Lovebird $50\n
        - Canary $40\n
        - Cockatiel $35\n
        - Finch $15\n
        - Budgie $10\n
        - Dove $8\n
        - Turtle-dove $8
    </string>
    <string name="adoption_fees_exotic_animal">
        - Ferret $100\n
        - Chinchilla $100 \n
        - Guinea-Pig $30 \n
        - Rat $15 \n
        - Hamster $10 \n
        - Hedgehog $75\n
        - Mouse $10\n
        - Gerbil $15\n
        - Degu $15
        \n\n(All prices subject to change without notice)
    </string>
    <string name="spcaMontreal">SPCA Montreal</string>
    <string name="spcaAddress">5215 Jean-Talon West \nMontreal, Quebec\nH4P WX4</string>
    <string name="spcaPhone">(514)735-2711 Ext. 2223</string>
    <string name="spcaEmail">adoption@spca.com</string>
    <string name="emailSPCAtitle">Email the SPCA</string>
       <string name="hello_blank_fragment">Hello blank fragment</string>
       <string name="title_activity_test">testActivity</string>
       <string name="hello_world">Hello world!</string>
       <string name="action_settings">Settings</string>
       <string name="title_activity_browsing">Browsing</string>
       <string name="title_activity_main_activity2">MainActivity2</string>
       <string name="title_activity_splash_page">SplashPage</string>
    <string name="rsbAgeFrom">" between "</string>
    <string name="rsbAgeTo">" to "</string>
    <string name="rsbAgeYears">" years"</string>
    <string name="rsbIllimited">" illimited"</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sterilized">Sterilized</string>
    <string name="declawed">Declawed</string>
    <string name="abandoned">Abandoned</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="both">Both</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="browseID">ID</string>
    <string name="browseName">Name</string>
    <string name="browseAge">Age</string>
    <string name="name">Name</string>
    <string name="animalID">Animal ID</string>
    <string name="spcaPetProfile">SPCA Montreal- Pet Profile</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="description">Description</string>
    <string name="images">Images</string>
    <string name="lookAtWhatIFound">Look at what I found!</string>
    <string name="availableAtSPCA">Available for adoption at the Montreal SPCA</string>
    <string name="favoritesTitle">Favorites</string>
    <string name="newTitle">New</string>
    <string name="notificationsTitle">Notifications</string>
    <string name="infoTitle">Info</string>
    <string name="contactTitle">Contact</string>
    <string name="mainPageTitle">Main Page</string>
    <string name="newsTitle">News</string>
    <string name="faqTitle">Before Adopting</string>
    <string name="donateTitle">Donate</string>
    <string name="searchResultsTitle">Search Results</string>
    <string name="detailsTitle">Details</string>
    <string name="helpMeFindAHome">Help me find a home!</string>
    <string name="adopt">Adopt!</string>
    <string name="removeAll">Remove All</string>
    <string name="adoptedCAPS">ADOPTED</string>
    <string name="systemStateOutOfSync">System may be out of sync</string>
    <string name="refresh">Refresh</string>
    <string name="share_with">Share Animal Details</string>
    <string name="emptyListFavoritesMSG">There is no animal in favorite list.</string>
    <string name="emptyListNewMSG">No new animal.\nTry again later.</string>
    <string name="emptyListMSG">No animal matched selection criteria.</string>
    <string name="adoptableSearchError">There was a communication error while downloading list of adoptable animals</string>
    <string name="adoptableDetailsErrors">There was a problem getting information about some animals.  You may not have up-to date information.</string>
    <string name="adoptableSearchPostJobError">There was a problem updating animal information.  Your animal lists may not be up-to date.</string>
    <string name="ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="offline">Off-line mode</string>
    <string name="clearFavs">Clear favorite animals list?</string>
    <string name="clearNew">Clear new animals list?</string>
    <string name="radio_heure">Every Hour</string>
    <string name="radio_sixheures">Every 6 Hours</string>
    <string name="radio_douzeheures">Every 12 Hours</string>
    <string name="radio_jours">Every Day</string>
    <string name="radio_semaines">Every Week</string>
    <string name="check_activer">Enable notifications</string>
    <string name="text_titre">Notifications Management</string>
    <string name="hardcodeNewsHeadline">#MakeFurHistory</string>
    <string name="hardcodedNews">In order to raise awareness of the plight of animals in the commercial fur trade, the Montreal SPCA, in partnership with the Association for the Protection of Fur Bearing Animals (APFA) and LUSH Cosmetics, recently launched the #MakeFurHistory campaign.
Visit www.makefurhistory.com to learn more about the campaign and to take the fur-free pledge.</string>
    <string name="notificationText">There are new animals available matching your search criteria...</string>
    <string name="donation_title">Montreal\'s SPCA needs YOU</string>
     <string name="donation_description"> Since 1869, Montreal\'s SPCA has depended on the generosity of individuals like you to fund our life saving work. Together, with your support Montreal\'s SPCA will continue to provide our vital services. We take in about 14,000 homeless animals annually and rely almost exclusively on donations from the public to achieve our work. Please give what you can to help us carry on our mission.</string>
   <string name="donation_fineprint">The Montreal SPCA is a registered charity with a tax-exempt status. Our charitable ID number is: 11921 9954 RR0001. All donations are tax deductible.</string>
    <string name="donation_amount">Donation Amount: $</string>
    <string name="make_donation">Make Donation</string>
</resources>