<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_page"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titre"
            android:layout_weight="1"
            android:text="@string/text_titre"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="30sp"/>
        />

    </LinearLayout>
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:text="@string/radio_heure"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/heure"

            android:padding="10dp"
            android:textSize="25sp"
            android:visibility="visible"
            android:clickable="false"
            android:checked="false" />

        <RadioButton

            android:text="@string/radio_sixheures"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/sixheures"
            android:padding="10dp"
            android:textSize="25sp"
            android:visibility="visible"
            />

        <RadioButton

            android:text="@string/radio_douzeheures"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/douzeheures"
            android:padding="10dp"
            android:textSize="25sp"
            android:visibility="visible"
            />



        <RadioButton

            android:text="@string/radio_jours"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/jours"
            android:padding="10dp"
            android:textSize="25sp"
            android:visibility="visible"
            />

        <RadioButton

            android:text="@string/radio_semaines"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/semaines"
            android:padding="10dp"
            android:textSize="25sp"
            android:visibility="visible"
            />

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <CheckBox
            android:text="@string/check_activer"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/activer"
            android:checked="false"
            android:padding="10dp"
            android:textSize="25sp"
            android:gravity="center"
            />


    </LinearLayout>

</LinearLayout>