<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SampleActivity" >
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_title"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/text_donation_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_description"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/text_donation_description"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            android:adjustViewBounds="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donation_amount"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/text_donation_amount" />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="12"
                        android:id="@+id/donation_amount"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/text_donation_amount"
                        android:layout_toEndOf="@+id/text_donation_amount"
                        />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_give"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/make_donation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donation_fineprint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/text_donation_fineprint" />
    </LinearLayout>
    </ScrollView>




</RelativeLayout>
