<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_page"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:id="@+id/spca_logo"
            android:src="@drawable/spca_logo"
            android:layout_marginTop="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spcaAddress"
                android:textSize="25sp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:id="@+id/metroNamur"
                android:src="@drawable/metro_namur" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spcaHours"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appel_b"
                android:textSize="20sp"
                android:src="@drawable/call"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fone"
                android:text="@string/spcaPhone"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSend"
                android:textSize="18sp"
                android:src="@drawable/email" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/send"
                android:layout_weight="1"
                android:text="@string/spcaEmail"
                android:textSize="18sp"
                android:paddingLeft="5dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ident"
                android:layout_weight="1"
                android:text="Id : XXXX"
                android:textStyle="bold"
                android:textSize="35sp"/>
            />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/animalImage"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/twitter_icon"
                    android:src="@drawable/twitter_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="\@SPCAMontreal"
                    android:id="@+id/twitter_tv"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/twitter_icon"
                    android:layout_toEndOf="@+id/twitter_icon"
                    android:paddingLeft="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/facebook_iv"
                    android:src="@drawable/facebook_icon"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="www.facebook.com/SPCAMontreal"
                    android:id="@+id/facebook_tv"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/facebook_iv"
                    android:layout_toEndOf="@+id/facebook_iv"
                    android:paddingLeft="5dp" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>





    <!--<LinearLayout-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/send"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/spcaEmail"-->
    <!--android:padding="10dp"-->
    <!--android:textSize="18sp"/>-->



    <!--</LinearLayout>-->




</LinearLayout>



